[package]
name = "grafton-visca"
version = "0.1.0"
edition = "2021"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "Rust based VISCA over IP implementation for controlling PTZ Cameras"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-visca"
homepage = "https://www.grafton.ai"
publish = false
categories = ["multimedia"]
keywords = ["ptz", "camera", "visca", "video"]
include = ["Cargo.toml", "src/**/*", "examples/**/*"]
readme = "READNE.md"

[dependencies]
log = "*"
env_logger = "*"
