[package]
name = "grafton-visca"
version = "0.1.0"
edition = "2021"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "Rust based VISCA over IP implementation for controlling PTZ Cameras"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-visca"
homepage = "https://www.grafton.ai"
categories = ["multimedia"]
keywords = ["ptz", "camera", "visca", "video"]
exclude = ["target/", ".gitignore", ".github/", ".vscode/"]
readme = "READNE.md"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.11"
nom = "7.1"
thiserror = "1.0"